--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "moment": "~2.22.0",
         "react": "~16.3.1",
         "react-dom": "~16.3.1",
+        "react-router-dom": "4.2",
         "react-transition-group": "~2.3.0",
         "reset-css": "~3.0.0",
         "socket.io-client": "~2.1.0"
